# Inertia

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  genericmat.rs  genericpoly.rs  groups.rs  serde.rs  test.rs
src/: core.rs  error.rs  generic.rs  group.rs  lib.rs  macros.rs  main.rs  mat.rs  matrix.rs  poly.rs  polynomial.rs  prod.rs  traits.rs
src/base/: mod.rs
src/base/complex/: macros.rs  src.rs  traits.rs
src/base/finfld/: macros.rs  mod.rs  src.rs  traits.rs
src/base/finfldmat/: arith.rs  mod.rs  src.rs
src/base/finfldpoly/: conv.rs  mod.rs  src.rs
src/base/integer/: arith.rs  conv.rs  mod.rs  src.rs  traits.rs
src/base/intmat/: arith.rs  conv.rs  src.rs  traits.rs
src/base/intmod/: macros.rs  mod.rs  src.rs  traits.rs
src/base/intmodmat/: arith.rs  mod.rs  src.rs
src/complex/: conv.rs  mod.rs  src.rs  traits.rs
src/core/: integer.rs  intmat.rs  intmod.rs  intmodmat.rs  intmodpoly.rs  intpoly.rs  macros.rs  rational.rs  ratmat.rs  ratpoly.rs
src/finfld/: conv.rs  macros.rs  mod.rs  src.rs  traits.rs
src/finfldmat/: .src.rs.swp  conv.rs  src.rs  traits.rs
src/finfldpol/: .src.rs.swp  conv.rs  mod.rs  src.rs  traits.rs
src/integer/: arith.rs  conv.rs  macros.rs  mod.rs  src.rs  traits.rs
src/intmat/: arith.rs  conv.rs  mod.rs  src.rs  traits.rs
src/intmod/: conv.rs  macros.rs  mod.rs  src.rs  traits.rs
src/intmodmat/: .src.rs.swp  arith.rs  conv.rs  mod.rs  src.rs  traits.rs
src/intmodpol/: conv.rs  src.rs  traits.rs
src/intpol/: arith.rs  conv.rs  macros.rs  mod.rs  src.rs  traits.rs
src/map/: mod.rs
src/mat/: generic.rs
src/matrix/: arith.rs  generic.rs  intmat.rs
src/numfld/: src.rs  traits.rs
src/padic/: macros.rs  mod.rs  src.rs  traits.rs
src/poly/: arith.rs  generic.rs  intpoly.rs  mod.rs  ops.rs  ratpoly.rs
src/polynomial/: arith.rs  generic.rs
src/product/: arith.rs  conv.rs  mod.rs  src.rs  traits.rs
src/qadic/: conv.rs  src.rs  traits.rs
src/ratfunc/: arith.rs  conv.rs  mod.rs  src.rs  traits.rs
src/rational/: arith.rs  conv.rs  macros.rs  mod.rs  src.rs  traits.rs
src/ratmat/: conv.rs  src.rs  traits.rs
src/ratpol/: arith.rs  conv.rs  macros.rs  mod.rs  src.rs  traits.rs
src/real/: conv.rs  macros.rs  mod.rs  src.rs  traits.rs
(+81 files in other folders)
