[package]
name = "inertia"
version = "0.2.1"
edition = "2021"
authors = ["William Youmans <wyoumans@usf.edu>"]
description = "Inertia"
homepage = "https://github.com/wjyoumans/inertia"
repository = "https://github.com/wjyoumans/inertia"
license = "GPL-3.0-or-later" 
keywords = ["flint", "real", "complex", "number-theory", "math"]
categories = ["algorithms", "external-ffi-bindings", "mathematics"]
readme = "README.md"

[dependencies]
rustc-hash = "1.0"
num-traits = "0.2" 
libc = "0.2" 
flint-sys = {version = "0.6.2", features = ["disable-make-check"] }
arb-sys = {version = "0.3", features = ["disable-make-check"] }
antic-sys = {version = "0.3", features = ["disable-make-check"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Only Assign trait and traits in rug::ops provided
[dependencies.rug]
version = "1.13"
default-features = false
features = []

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
