[package]
name = "inertia"
version = "0.2.5"
edition = "2021"
authors = ["William Youmans <wyoumans@usf.edu>"]
description = "Inertia"
homepage = "https://github.com/wjyoumans/inertia"
repository = "https://github.com/wjyoumans/inertia"
license = "GPL-3.0-or-later" 
keywords = ["flint", "real", "complex", "number-theory", "math"]
categories = ["algorithms", "external-ffi-bindings", "mathematics"]
readme = "README.md"

[dependencies]
libc = "0.2"
rustc-hash = "1.0"
inertia-core = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bincode = "1.3"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
