[package]
name = "inertia"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde", "inertia-core/serde"]

[dependencies]
derivative = "2.2"
derive_more = "0.99"

[dependencies.inertia-core]
path = "../inertia-core"
version = "0.4"

[dependencies.inertia-algebra]
path = "../inertia-algebra"
version = "0.1"

[dependencies.inertia-generic]
path = "../inertia-generic"
version = "0.1"

[dependencies.serde]
optional = true
version = "1.0"
features = ["derive"]
